--- a/css/styles.css
+++ b/css/styles.css
@@ -252,41 +252,33 @@ h2 {
 }
 
 /* --- MENU DE NAVIGATION --- */
-.menu-toggle {
-    background: none;
-    border: none;
-    font-size: 1.5rem;
-    cursor: pointer;
-    display: none; /* caché par défaut */
+
+label, #toggle
+{
+    display: none;
 }
 
 @media (max-width: 7680000000000px) {
-    .nav-links {
-        display: none; /* caché par défaut */
+    .nav-links
+    {
+        display: none;
         flex-direction: column;
-        align-items: flex-start;
-        gap: 1rem;
-        background-color: #f5f5f5;
-        padding: 1rem;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        width: 100%;
-        z-index: 1000;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        background: #48435C;
+        height: 220px;
     }
-
-    .nav-links.open {
-        display: flex; /* s'affiche quand la classe "open" est là */
-    }
-
-    .menu-toggle {
-        display: block;
-        background: none;
-        border: none;
-        font-size: 1.5rem;
+    label 
+    {
+        width: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        font-size: 40px;
+        color: white;
         cursor: pointer;
-        color: #333;
+    }
+    #toggle:checked + .nav-links {
+        display: flex;
     }
 }
 
