--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,7 @@ label,
     .nav-links {
         display: none;
         flex-direction: column;
-        background: #48435C;
+        background: #f5f5f5;
         height: auto;
         padding: 1rem;
         margin-top: 1rem;
