--- a/css/styles.css
+++ b/css/styles.css
@@ -290,7 +290,7 @@ label,
 }
 
 /* VERSION MOBILE */
-@media all and (max-width: 991000000px) {
+@media (max-width: 991000000px) {
     label {
         display: flex;
         width: 30px;
