--- a/css/styles.css
+++ b/css/styles.css
@@ -203,9 +203,9 @@ h2 {
 /* Cible le contenu injecté dynamiquement */
 .shom-wrapper iframe {
     display: block;
-    width: 100% !important;     /* ✅ Forcer à occuper toute la largeur du parent */
-    max-width: 100% !important; /* ✅ Empêche de déborder */
-    height: auto !important;
+    /*width: 100% !important;     /* ✅ Forcer à occuper toute la largeur du parent */
+    max-width: 100% !important; /* ✅ Empêche de déborder 
+    /*height: auto !important;*/
     border: none;
 }
 
