--- a/css/styles.css
+++ b/css/styles.css
@@ -191,22 +191,20 @@ h2 {
     display: inline-block;
 }
 
-.shom-wrapper {
-    width: 100%;
-    max-width: 100%;
-    overflow-x: auto;
-    overflow-y: hidden;
-    -webkit-overflow-scrolling: touch;
-    position: relative;
-  }
-  
-/* Cible le contenu injecté dynamiquement */
-.shom-wrapper iframe {
+.mobile-tides {
+    display: none;
+}
+.desktop-tides {
     display: block;
-    /*width: 100% !important;     /* ✅ Forcer à occuper toute la largeur du parent */
-    max-width: 100% !important; /* ✅ Empêche de déborder 
-    /*height: auto !important;*/
-    border: none;
+}
+
+@media (max-width: 768px) {
+    .mobile-tides {
+        display: block; /* affiché sur mobile */
+    }
+    .desktop-tides {
+        display: none; /* caché sur mobile */
+    }
 }
 
 #timeline {
