--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-:root {
-    --mobile-width: 768px;
-}
-  
 html, body {
     height: 100%;
     margin: 0;
@@ -203,7 +199,7 @@ h2 {
     display: block !important;
 }
   
-@media (max-width: var(--mobile-width)) {
+@media (max-width: 768px) {
     .mobile-tides {
         display: block !important;
     }
@@ -314,7 +310,7 @@ label,
 }
 
 /* VERSION MOBILE */
-@media (max-width: var(--mobile-width)) {
+@media (max-width: 768px) {
     label {
         display: flex;
         width: 30px;
