--- a/css/styles.css
+++ b/css/styles.css
@@ -333,8 +333,8 @@ label[for="toggle"] {
         flex-direction: column;
         background-color: #f5f5f5;
         height: auto;
-        padding: 1rem;
         margin-top: 1rem;
+        gap: 0.5rem;
     }
 
     #toggle:checked ~ .nav-links {
