--- a/css/styles.css
+++ b/css/styles.css
@@ -337,6 +337,10 @@ label[for="toggle"] {
         gap: 0.5rem;
     }
 
+    .nav-links a {
+        padding: 0rem 0rem;
+    }
+
     #toggle:checked ~ .nav-links {
         display: flex;
     }
