--- a/css/styles.css
+++ b/css/styles.css
@@ -202,6 +202,7 @@ h2 {
 @media (max-width: 768px) {
     .mobile-tides {
         display: block !important;
+        transform: scale(1.5);  
     }
 
     .desktop-tides {
