--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,19 @@ h2 {
     font-size: 1.2rem;
 }
 
+@media (max-width: 768px) {
+    .bloc-titre {
+        font-size: 1rem;
+    }
+    .bloc-valeur {
+        font-size: 2rem;
+    }
+    .meteo-bloc {
+        height: 100px;
+        padding: 10px;
+    }
+}
+
 #tide-container {
     position: relative;
     display: inline-block;
