--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,9 @@ h2 {
 
 #tides-container {
     position: relative;
-    display: inline-block;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
 }
 
 .mobile-tides {
