--- a/css/styles.css
+++ b/css/styles.css
@@ -206,6 +206,9 @@ h2 {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .mobile-tides {
