responsive weather station

--- a/css/styles.css
+++ b/css/styles.css
@@ -195,8 +195,8 @@ h2 {
         font-size: 2rem;
     }
     .meteo-bloc {
-        height: 100px;
-        width: 100px;
+        height: 4rem;
+        width: 4rem;
         padding: 10px;
     }
 }
