--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,9 @@ h2 {
 }
 
 @media (max-width: 768px) {
+    .meteo-grille {
+        gap: 1rem;
+    }
     .bloc-titre {
         font-size: 1rem;
         margin-bottom: 0.7rem;
@@ -196,8 +199,8 @@ h2 {
         font-size: 1.2rem;
     }
     .meteo-bloc {
-        height: 4rem;
-        width: 4rem;
+        height: 5.5rem;
+        width: 5.5rem;
         padding: 10px;
     }.uv-labels {
         font-size: 0.6rem;
