--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,9 @@ h2 {
     .wind-label {
         font-size: 0.5rem;
     }
+    .wind-center {
+        font-size: 0.4rem;
+    }
 }
 
 #tides-container {
