--- a/css/styles.css
+++ b/css/styles.css
@@ -114,8 +114,7 @@ h2 {
   
 .chart-container {
     display: grid;
-    flex-direction: column;
-    align-items: center;
+    place-items: center;
     width: 100%;
 }
 
@@ -125,6 +124,16 @@ h2 {
     width: 100%;
     border: 1px solid #ccc;
     margin-bottom: 20px;
+}
+
+@media (max-width: 768px) {
+    .chart-weather-station {
+        height: 40rem !important;
+    }
+    .chart-weather-station canvas {
+        height: 100% !important;
+        width: 100% !important;
+    }
 }
 
 /* Assurez-vous que les conteneurs des graphiques ont également des dimensions définies */
