--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,7 @@ h2 {
 #tides-container {
     position: relative;
     height: 100%;
-    width: auto;
+    width: 100%;
 }
 
 .mobile-tides {
@@ -232,6 +232,7 @@ h2 {
 
 .desktop-tides {
     display: block !important;
+    margin: 0 auto;
 }
 .tides-main {
     justify-content: flex-start;
