--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -6,9 +6,10 @@ table {
 }
 
 th, td {
-    padding: 0.6em;
+    padding: 0.5em;
     border: 1px solid #ccc;
     text-align: center;
+    font-size: 0.9em;
 }
 
 thead {
