--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -63,7 +63,7 @@
 }
 
 /* Deuxième colonne */
-/* .weather-forecast-table th:nth-child(2),
+.weather-forecast-table th:nth-child(2),
 .weather-forecast-table td:nth-child(2) {
   font-weight: 700;
-} */
+}
