--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -17,7 +17,6 @@
 .weather-forecast-table th,
 .weather-forecast-table td {
   padding: 12px 16px;
-  text-align: left;
   border: 0.5px solid #ccc;
 }
 
@@ -57,7 +56,7 @@
     font-weight: 700;
 }
 
-tbody td {
-  padding: 4px 8px;  /* réduit l’espace intérieur */
-  line-height: 1.2;  /* réduit la hauteur visuelle du texte */
+table tr:not(:first-child) td {
+  padding: 4px 8px !important;
+  line-height: 1.2;
 }
