--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -17,11 +17,13 @@
 .weather-forecast-table th {
   padding: 12px 16px;
   border: 0.5px solid #ccc;
+  font-weight: 700;
 }
 
 .weather-forecast-table td {
   padding: 4px 8px;
   line-height: 1.2;
+  border: 0.5px solid #ccc;
 }
 
 .weather-forecast-table thead {
@@ -53,9 +55,4 @@
 .weather-forecast-table th {
   text-align: center;
   vertical-align: middle;
-}
-
-/* Première ligne d'en-tête (le <thead>) en gras */
-.weather-forecast-table thead th {
-    font-weight: 700;
 }
