--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -15,15 +15,15 @@
 }
 
 .weather-forecast-table th {
-  padding: 12px 16px;
+  padding: 12px 10px;
   border: 0.5px solid #ccc;
-  font-weight: 700;
+  font-size: 0.9rem;
 }
 
 .weather-forecast-table td {
-  padding: 4px 8px;
-  line-height: 1.2;
+  padding: 2px 0px;
   border: 0.5px solid #ccc;
+  font-size: 0.9rem;
 }
 
 .weather-forecast-table thead {
