--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -1,6 +1,20 @@
+.weather-forecast {
+  display: flex;
+  gap: 2rem; /* espace entre tableau et graphiques */
+  align-items: flex-start; /* aligne le haut du tableau et des graphiques */
+  flex-wrap: wrap; /* pour qu’ils se placent en colonne sur petit écran */
+}
+
 .container-tab {
     margin-top: 1.5rem;
     margin-bottom: 2rem;
+    flex: 1 1 55%;
+    min-width: 300px;
+}
+
+.container-graphs {
+  flex: 1 1 45%;
+  min-width: 300px;
 }
 
 .weather-forecast-table {
