--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -3,6 +3,7 @@
   flex-wrap: nowrap; /* empêche de passer en dessous */
   gap: 2rem;
   align-items: flex-start;
+  margin-top: 1rem;
 }
 
 .container-tab {
