--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -5,11 +5,17 @@
   margin-bottom: 3rem;
 }
 
-.container-tab {
+#day-container-tab {
   flex: 0 1 60%;
   max-width: 60%;
   min-width: 0;
 }
+
+/* #week-container-tab {
+  flex: 0 1 60%;
+  max-width: 60%;
+  min-width: 0;
+} */
 
 .container-graphs {
   flex: 0 1 40%;
