--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -1,18 +1,17 @@
 #loading-message {
   font-size: 1rem;
   color: #555;
-  animation: blink 1s infinite;
+  animation: blink 2s infinite;
   margin: 2rem auto;
   text-align: center;
   font-weight: bold;
   padding: 1rem;
   border-radius: 8px;
   position: fixed;
-  top: 0;
+  top: 10rem;
   left: 0;
   width: 100%;
   z-index: 1000;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
 @keyframes blink {
