--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -128,7 +128,8 @@
 }
 
 .weather-week-icon {
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
+  padding: 3px;
   filter: brightness(0.97);
 }
