--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -20,15 +20,16 @@
 }
 
 #forecast-day {
-  display: flex;
   gap: 5rem;
   margin-top: 2rem;
   margin-bottom: 3rem;
+  width: 90%;
 }
 
 #forecast-week {
   margin-top: 2rem;
   margin-bottom: 3rem;
+  width: 90%;
 }
 
 #forecast-week-table {
@@ -64,7 +65,7 @@
 }
 
 .forecast-table th {
-  padding: 10px 5px;
+  padding: 10px 10px;
   width: 10%;
 }
 
