--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -140,3 +140,16 @@
   user-select: none;
   margin: 0.4rem 0.4rem;
 }
+
+.badge-rain {
+  display: inline-block;
+  width: 2.5rem;
+  height: 2.5rem;
+  line-height: 2.5rem; /* pour centrer verticalement le texte */
+  border-radius: 50%;
+  font-weight: bold;
+  font-size: 0.9rem;
+  text-align: center;
+  user-select: none;
+  margin: 0.4rem 0.4rem;
+}
