--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -144,10 +144,10 @@
 .badge-rain {
   display: inline-block;
   width: 3rem;
-  height: 3rem;
-  line-height: 3rem;
-  padding: 0.2em 0.8em;
-  border-radius: 999px;
+  height: 2rem;
+  line-height: 2rem;
+  padding: 0.2rem;
+  border-radius: 9999px;
   font-size: 0.8rem;
   text-align: center;
   user-select: none;
