--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -34,11 +34,19 @@
 
 #forecast-week-table {
   margin: 0 auto;
-  height: rem;
 }
 
-#forecast-week-table tr {
-  height: 4rem;
+.forecast-table th,
+.forecast-table td {
+  border: 0.5px solid #ccc;
+}
+
+#forecast-week-table th {
+  font-size: 0.9rem;
+}
+
+#forecast-day-table th, td {
+  font-size: 0.8rem;
 }
 
 #forecast-day-table-container {
@@ -127,9 +135,9 @@
 }
 
 .weather-week-icon {
-  width: 30px;
-  height: 30px;
-  padding: 3px;
+  width: 2.5rem;
+  height: 2.5rem;
+  padding: 1px;
   filter: brightness(0.97);
 }
 
