--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -161,7 +161,7 @@
   line-height: 2rem;
   padding: 0.2rem;
   border-radius: 9999px;
-  font-size: 0.8rem;
+  font-size: 0.9em;
   text-align: center;
   user-select: none;
   margin: 0.4rem 0.4rem;
@@ -173,10 +173,11 @@
   display: inline-block;
   padding: 0.1em 0.6em;
   border-radius: 999px;
-  font-size: 0.75em;
+  font-size: 0.9em;
   font-weight: 600;
   white-space: nowrap;
   line-height: 1.2;
+  margin-right: 1rem;
 }
 
 .badge-sunset {
