--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -174,7 +174,7 @@
   padding: 0.1em 0.6em;
   border-radius: 999px;
   font-size: 0.9em;
-  font-weight: 600;
+  font-weight: bold;
   white-space: nowrap;
   line-height: 1.2;
   margin-right: 1rem;
@@ -186,8 +186,8 @@
   display: inline-block;
   padding: 0.1em 0.6em;
   border-radius: 999px;
-  font-size: 0.75em;
-  font-weight: 600;
+  font-size: 0.9em;
+  font-weight: bold;
   white-space: nowrap;
   line-height: 1.2;
 }
