--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -89,7 +89,6 @@
 .forecast-table th,
 .forecast-table td {
   border: 0.5px solid #ccc;
-  font-size: 0.8rem;
 }
 
 .forecast-table thead {
@@ -191,6 +190,7 @@
     max-width: none;
     min-width: auto;
     width: 100%;
+    flex-direction: column;
   }
   #forecast-week-table th {
     font-size: 0.5rem;
