--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -180,12 +180,8 @@
   h2 {
     font-size: 1.3rem;
   }
-  #forecast-day {
-    display: block;
-  }
   #forecast-day-table-container,
   .forecast-graphs {
-    max-width: 100%;
     flex: none;
     max-width: none;
     min-width: auto;
@@ -198,6 +194,11 @@
   }
   #forecast-day-table th, td {
     font-size: 0.5rem;
-    width: 2rem;
+  }
+  .forecast-table th {
+    padding: 5px 1px;
+  }
+  .forecast-table td {
+    padding: 1px 1px;
   }
 }
