--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -249,6 +249,7 @@
     margin-bottom: 1.5rem;
     background-color: #fff;
     box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    max-height: 15rem;
   }
 
   .forecast-day-block h3 {
