--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -213,7 +213,7 @@
   #forecast-day-table th::before {
     content: attr(data-mobile);
     font-size: 0.5rem;
-    white-space: nowrap;
+    white-space: pre-line;
   }
 
   .forecast-table th {
@@ -266,11 +266,13 @@
     justify-content: space-between;
     padding: 0.3rem 0;
     font-size: 0.9rem;
+    height: 3rem;
   }
 
   .forecast-day-row .label {
     font-weight: bold;
     color: #444;
+    align-items: center;
   }
 
   .forecast-day-row .value {
