--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -153,7 +153,7 @@
   margin: 0.4rem 0.4rem;
 }
 
-.sun-times {
+.sun-times, .wind {
     display: inline-flex;
     flex-direction: row;
     gap: 0.4rem;
@@ -277,7 +277,7 @@
     width: 1.5rem;
   }
 
-  .sun-times {
+  .sun-times, .wind {
     display: flex;
     flex-direction: column;
     align-items: center;
