--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -153,7 +153,7 @@
   margin: 0.4rem 0.4rem;
 }
 
-.sun-times, .wind {
+.sun-times {
     display: inline-flex;
     flex-direction: row;
     gap: 0.4rem;
