--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -131,7 +131,6 @@
   display: inline-block;
   width: 2.5rem;
   height: 2.5rem;
-  line-height: 2.5rem;
   border-radius: 50%;
   font-weight: bold;
   font-size: 0.9rem;
@@ -151,12 +150,6 @@
   text-align: center;
   user-select: none;
   margin: 0.4rem 0.4rem;
-}
-
-.sun-times {
-    display: inline-flex;
-    flex-direction: row;
-    gap: 0.4rem;
 }
 
 .badge-sunrise {
@@ -282,6 +275,11 @@
     flex-direction: column;
     align-items: center;
     gap: 0.2rem;
+  }
+
+  .badge {
+    width: 2rem;
+    height: 2rem;
   }
 
 }
