--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -137,6 +137,7 @@
   text-align: center;
   user-select: none;
   margin: 0.4rem 0.4rem;
+  align-content: center;
 }
 
 .badge-rain {
@@ -284,7 +285,7 @@
     align-items: center;
     justify-content: center;
     width: auto;
-    min-width: 3rem;
+    min-width: 2rem;
     text-align: center;
     margin-right: 0rem;
   }
