--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -250,7 +250,7 @@
     font-size: 1rem;
     margin: 0 0 0.5rem;
     text-align: left;
-    text-transform: capitalize;
+    text-transform: none;
   }
 
   .forecast-compact-values {
