--- a/css/weather-forecast.css
+++ b/css/weather-forecast.css
@@ -153,22 +153,20 @@
   margin: 0.4rem 0.4rem;
 }
 
-.badge-sunrise {
+#badge-sunrise {
   background-color: #FFD700;  /* jaune doré */
   color: #000;
   display: inline-block;
-  padding: 0.1em 0.6em;
-  border-radius: 999px;
-  font-size: 0.9rem;
-  white-space: nowrap;
-  line-height: 1.2;
   margin-right: 1rem;
 }
 
-.badge-sunset {
+#badge-sunset {
   background-color: #FF8C00;  /* orange foncé */
   color: #fff;
   display: inline-block;
+}
+
+#badge-sunrise, #badge-sunset {
   padding: 0.1em 0.6em;
   border-radius: 999px;
   font-size: 0.9rem;
@@ -268,7 +266,7 @@
   }
 
   #span-sun {
-    width: 20%;
+    width: 18%;
   }
 
   #span-temp {
@@ -279,21 +277,12 @@
     gap: 0.5rem;
   }
 
-/*   #badge-temp-min, #badge-temp-max {
-    width: min(2.5em, 8vw);
-    height: min(2.5em, 8vw);
-    font-size: clamp(0.8rem, 2vw, 1.2rem);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  } */
-
   #span-wind {
-    width: 15%;
+    width: 16%;
   }
 
   #span-rain {
-    width: 15%;
+    width: 16%;
   }
 
   .sun-times, .wind {
@@ -304,7 +293,8 @@
     gap: 0.2rem;
   }
 
-  .sun-times .badge-sun {
+  .sun-times #badge-sunrise,
+  .sun-times #badge-sunset {
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -315,17 +305,12 @@
   }
 
   .badge {
-    width: min(2.5em, 8vw);
-    height: min(2.5em, 8vw);
-    font-size: clamp(0.8rem, 2vw, 1.2rem);
+    width: min(3em, 8vw);
+    height: min(3em, 8vw);
+/*     font-size: clamp(0.8rem, 2vw, 1.2rem); */
     display: flex;
     justify-content: center;
     align-items: center;
   }
-
-/*   .badge-rain {
-    width: min(2.5em, 8vw);
-    height: min(2.5em, 8vw);
-  } */
 
 }
